# MichiganAutonomousVehicles.jl

./: .travis.yml  LICENSE.md  README.md  REQUIRE
benchmark/: REQUIRE  benchmarks.jl
catkin_ws/: my_path.txt
catkin_ws/data/vehicle/: position.txt
catkin_ws/data/vehicle/paths/: my_path.txt
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_ws/devel/lib/pkgconfig/: mavs_description.pc  mavs_gazebo.pc  mavs_plugins.pc
catkin_ws/src/: main.jl
catkin_ws/src/mavs_control/: CMakeLists.txt  link_positions.jl  main.jl  move_block_along_x.jl  move_hmmwv.jl  obstacle_avoidance.jl  obstacle_avoidance_chrono.jl  obstacle_parameters.jl  package.xml  position.jl  setup.py  teliop.jl  teliop_velodyne.jl  test.jl  tf.jl
catkin_ws/src/mavs_control/launch/: mavs_control.launch  move_velodyne_16_bot.launch  teliop.launch  teliop_velodyne_16_bot.launch
catkin_ws/src/mavs_control/msg/: Control.msg  chrono_command
catkin_ws/src/mavs_description/: CMakeLists.txt  add_two_ints_client.py  add_two_ints_server.py  getPos.py  package.xml
catkin_ws/src/mavs_description/config/: hmmwv_params.yaml
catkin_ws/src/mavs_description/launch/: ackermann.launch  hokuyo_bot.launch  lidar_data.launch  lidar_example.launch  lidar_example2.launch  tf_data.launch  velodyne_16_bot.launch
catkin_ws/src/mavs_description/src/: frame_tf_broadcaster.cpp  position_broadcaster.cpp  turtle_tf_broadcaster.cpp  turtle_tf_listener.cpp
catkin_ws/src/mavs_description/urdf/: block.xacro  body.xacro  example.urdf.xacro  hmmwv.xacro  lidar_example.urdf.xacro  lidar_vlp_16.urdf.xacro  obstacle.urdf.xacro  obstacles.urdf.xacro  sensors.urdf.xacro  vehicle_gazebo.urdf.xacro  velodyne_16.xacro  velodyne_16_bot.xacro  wheel.xacro
catkin_ws/src/mavs_description/worlds/: hmmwv.world  test1.world
catkin_ws/src/mavs_gazebo/: CMakeLists.txt  package.xml
catkin_ws/src/mavs_gazebo/config/: default_sim_params.yaml  mavs_params.yaml
catkin_ws/src/mavs_gazebo/launch/: hmmwv.launch  hmmwv_chrono.launch  test.launch  world.launch
catkin_ws/src/mavs_gazebo/urdf/: mavs.urdf.xacro  mavs.xacro
catkin_ws/src/mavs_gazebo/yaml/: default_sim_params.yaml
catkin_ws/src/mavs_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/mavs_msgs/msg/: Pos.msg
catkin_ws/src/mavs_plugins/: CMakeLists.txt  package.xml
catkin_ws/src/mavs_plugins/src/: model_push.cc  vel.cc  velodyne_plugin.cc
catkin_ws/src/mavs_simulator/: CMakeLists.txt  package.xml
catkin_ws/src/mavs_simulator/launch/: move_velodyne_16_bot.launch
catkin_ws/src/obstacle_detector/: nodelet_plugins.xml
catkin_ws/src/obstacle_detector/launch/: demo.launch  mavs.launch  nodelets.launch
catkin_ws/src/ros_chrono/: CMakeLists.txt  package.xml
catkin_ws/src/ros_chrono/src/: hmmwv_model.cpp
catkin_ws/src/ros_chrono_msgs/: CMakeLists.txt
catkin_ws/src/ros_chrono_msgs/msg/: command_chrono.msg  veh_status.msg
config/case/: s12.yaml
config/planner/: RTPP.yaml
devel/: .catkin  .rosinstall  setup.sh
docs/source/_html_build/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/source/_html_build/.doctrees/: environment.pickle  index.doctree
docs/source/_html_build/lidar/: main.html
docs/source/lidar/: main.rst
examples/: autonomouscontrol.jl  postProcess.jl  tmp.jl
examples/Cases/Obstacles/: caseStudy.csv
examples/Cases/Tracks/: caseStudy.csv
examples/autonomousControl/: main.jl  main_GR.jl  main_tire.jl  postProcess.jl  poster.jl  tardec  temp.jl
examples/autonomousControl/results/TEMP_autoARC_KNITRO/: description.txt  plant_data.csv
examples/autonomousControl/results/posterA_auto_KNITRO/: description.txt
examples/autonomousControl/results/testC_auto_KNITRO/: description.txt
examples/autonomousControl/results/testD_auto_KNITRO/: description.txt
examples/autonomousControl/results/testE_auto_KNITRO/: description.txt
examples/autonomousControl/results/testF_auto_KNITRO/: description.txt
examples/autonomousControl/results/test_1_KNITRO/: description.txt
examples/autonomousControl/results/test_autoARC_KNITRO/: description.txt  plant_data.csv
examples/pathFollowing/: check  check.jl  main.jl  main_GR.jl  main_old.jl  plot.jl  postProcess.jl  testPathFollowing.jl
examples/pathFollowing/results/: U.csv  X0.csv  mpc_tf.csv  not_save.csv  sol_t.csv  sol_u.csv  t.csv
examples/pathFollowing/results/10_obstacles_caseStudy_KNITRO/: description.txt  plant_data.csv
examples/pathFollowing/results/8_obstacles_caseStudy_KNITRO/: plant_data.csv
examples/pathFollowing/results/caseStudy_KNITRO_GR/: description.txt  plant_data.csv
examples/pathFollowing/results/caseStudy_KNITRO_test_3/: description.txt
examples/pathFollowing/results/caseStudy_KNITRO_test_4/: data.jld  description.txt
examples/pathFollowing/results/caseStudy_KNITRO_test_7/: plant_data.csv
examples/pathFollowing/results/caseStudy_KNITRO_test_8/: description.txt
examples/pathFollowing/results/caseStudy_KNITRO_test_9/: plant_data.csv
examples/pathFollowing/results/data/: U.csv  X0.csv  sol_t.csv  sol_u.csv  t.csv
examples/pathFollowing/results/obs_miss/: plant_data.csv
examples/pathFollowing/results/path_IPOPT_test_1/: description.txt
examples/pathFollowing/results/path_IPOPT_test_9/: plant_data.csv
examples/pathFollowing/results/path_IPOPT_test_PLOTS_pyplot/: description.txt
examples/results/: case.csv  ce.csv  obs_1.csv  opt.csv  plant.csv  veh.csv
examples/sharedControl/: main.jl  mainAS.jl  mainSC.jl  plots.jl  postProcess.jl  steering_angle.jl  testSharedControl.jl  tune_gains.jl
src/: AutonomousControl.jl  CaseModule.jl  MAVs.jl  MichiganAutonomousVehicles.jl  PathFollowing.jl  SharedControl.jl  SharedControl_V1.jl  SimpleModel.jl  TODO.txt
src/VehicleModels/Plots/: VehicleModels_plots.jl
src/launch/: mavs_control.launch
src/mavs_control/: CMakeLists.txt  package.xml
test/: moving_obstacles.jl  runtests.jl
test/AutonomousControl/: hmmwv.jl
workspace/devel/: .catkin  .rosinstall  setup.sh
workspace/src/lidar_model/: CMakeLists.txt  velodyne.world  velodyne_plugin.cc
(+64 files in other folders)
