<?xml version="1.0"?>
<package format="2">
  <name>mavs_description</name>
  <version>0.0.0</version>
  <description>The mavs_description package</description>

  <license>MIT</license>
  <author email="febboh@umich.edu">Huckleberry Febbo</author>
  <maintainer email="febbo@umich.edu">Huckleberry Febbo</maintainer>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <depend>gazebo_ros</depend>
  <depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>

  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>

  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>rviz</depend>
  <depend>xacro</depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
