<?xml version="1.0"?>
<package format="2">
  <name>mavs_description</name>
  <version>0.0.0</version>
  <description>The mavs_description package</description>

  <license>MIT</license>
  <author email="febboh@umich.edu">Huckleberry Febbo</author>
  <maintainer email="febbo@umich.edu">Huckleberry Febbo</maintainer>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>turtlesim</depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>gazebo_ros</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
