<?xml version="1.0"?>
<package format="2">
  <name>mavs_simulator</name>
  <version>0.0.0</version>
  <description>
    Gazebo sim
  </description>

  <license>TODO</license>
  <maintainer email="febbo@umich.edu">febbo</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>mavs_gazebo</exec_depend>
  <exec_depend>mavs_control</exec_depend>

  <export>
    <metapackage/>
  </export>

</package>
